--- a/.github/workflows/ping.yml
+++ b/.github/workflows/ping.yml
@@ -2,15 +2,21 @@ name: Render Pinger
 
 on:
   schedule:
-    - cron: '*/10 * * * *'  # Every 10 minutes
+    - cron: '*/1 * * * *'  # Every 10 minutes
   workflow_dispatch:        # Optional: Manual trigger
 
 jobs:
   ping:
     runs-on: ubuntu-latest
     steps:
+
+      - name: Test Ping
+        run: echo "This is a test ping at $(date)"
+
       - name: Ping App 1
         run: curl -s https://connectsphere-ud6f.onrender.com/
 
       - name: Ping App 2
         run: curl -s https://connectsphere-official.onrender.com/
+
+        
